--- a/src/pages/styles/Employee.css
+++ b/src/pages/styles/Employee.css
@@ -1,4 +1,52 @@
 section{
     width: 100%;
-    background-color: #E9E9E9
+    display: flex;
+    background-color: #E9E9E9;
+    font-family: 'Raleway';
+}
+.add-employee{
+    width: 100%;
+    margin: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between
+}
+.section-name{
+    font-size: 40px;
+    font-weight: 900;
+}
+.section-button{
+    width: 150px;
+    height: 40px;
+    border-radius: 25px;
+    color: #fff;
+    background-color: #4EC9AE;
+    border: 1px solid #4EC9AE
+}
+.contents{
+    width: 100%;
+    margin:35px 40px 0 5px;
+}
+.content-menu{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    font-weight: bold;
+    font-size: 12px
+}
+.box{
+    height: 20px;
+    width: 20px;
+    border-radius: 7px;
+    background-color: #fff;
+    border: 1px solid grey;
+}
+.employee-tag{
+    display: flex;
+    flex-direction: row;
+    margin-left: 10px
+}
+.main-content{
+    display: flex;
+    justify-content: space-around;
 }
