--- a/src/pages/styles/Employee.css
+++ b/src/pages/styles/Employee.css
@@ -32,7 +32,7 @@ section{
     flex-direction: row;
     justify-content: space-around;
     font-weight: bold;
-    font-size: 12px
+    font-size: 12px;
 }
 .box{
     height: 20px;
@@ -40,13 +40,89 @@ section{
     border-radius: 7px;
     background-color: #fff;
     border: 1px solid grey;
+    margin-right: 40px
 }
 .employee-tag{
     display: flex;
     flex-direction: row;
-    margin-left: 10px
+    margin-left: 5px
 }
 .main-content{
+    width: 100%;
+    margin:20px 40px 0 23px;
+} 
+.content{
     display: flex;
+    flex-direction: row;
     justify-content: space-around;
+    height: 80px;
+    background-color: #fff;
+    margin: 10px 50px 10px 0;
+    border-radius: 10px;
+    align-items: center
+}
+.user-profile{
+    display: flex;
+    padding-right: 40px
+}
+.user-profile-picture{
+    margin-right: 20px
+}
+.profile-picture{
+    height: 50px;
+    width:50px;
+    border-radius: 100%
+}
+.user-name{
+    display: block;
+    font-size: 15px;
+    font-weight: 700
+}
+.user-title{
+    font-size: 12px;
+}
+.user-salary{
+    padding-right: 20px
+}
+.salary{
+    display: block;
+    font-size: 15px;
+    font-weight: 700
+}
+.salary-position{
+    font-size: 12px;
+}
+
+.status{
+    display: block;
+    font-size: 15px;
+}
+.months{
+    font-size: 12px;
+}
+.user-edit{
+    display: flex;
+    flex-direction: row;
+
+}
+.edit-user{
+    height: 20px;
+    margin-right: 5px
+    
+}
+.edit{
+    padding: 10px 0 10px 0
+}
+.edit-seperator{
+    height: 40px;
+    width: 2px;
+    background-color: #E9E9E9;
+    margin: 0 5px 0 5px;
+}
+.delete{
+    padding: 10px 0 10px 0
+}
+.delete-user{
+    height: 20px;
+    margin-left: 5px
 }
