added hover effect for sidebar

--- a/src/components/styles/Sidebar.css
+++ b/src/components/styles/Sidebar.css
@@ -24,8 +24,12 @@
 
 }
 .project-items{
-    margin: 30px 0 0 0;
-    display: flex
+    margin-right: 50px;
+    display: flex;
+    padding: 15px;
+}
+.project-items:hover, :active{
+    background: #EEEEEE;
 }
 .project-icons{
     height: 30px;
