--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -53,11 +53,22 @@ header{
     justify-content: center;
     padding-top: 5px
 }
+a{
+    color: #858F99;
+    text-decoration: none
+}
+a:active{
+    color: black;
+}
+
 .item{
     margin: 0 30px 0 30px;
     list-style: none;
     font-weight: bold;
     letter-spacing: 1px
+}
+.item-black{
+    color: #000
 }
 .profile-menu{
     display: flex;
