--- a/src/components/styles/Sidebar.css
+++ b/src/components/styles/Sidebar.css
@@ -28,7 +28,7 @@
     display: flex;
     padding: 15px;
 }
-.project-items:hover, :active{
+.project-items:hover{
     background: #EEEEEE;
 }
 .project-icons{
